@@ -7,13 +7,15 @@ buildscript {
         // SpringBoot
         springBootVersion = springbootVersion
 
+        // SpringBootAdmin
+        springbootAdminVersion = springbootAdminVersion
+
+        // ModelMapper
+        modelmapperVersion = modelmapperVersion
+
         // jUnit5
         jupiterVersion = jupiterVersion
         platformVersion = platformVersion
-
-        // Doma
-        springbootDomaVersion = springbootDomaVersion
-
     }
 
     repositories {
@@ -23,7 +25,7 @@ buildscript {
 }
 
 plugins {
-    id "org.springframework.boot" version "2.0.2.RELEASE"
+    id "org.springframework.boot" version "2.1.1.RELEASE"
     id "org.sonarqube" version "2.6.2"
 }
 
@@ -56,7 +58,7 @@ allprojects {
     }
 
     jacoco {
-        toolVersion = "0.8.1"
+        toolVersion = "0.8.2"
         reportsDir = file("$buildDir/customJacocoReportDir")
     }
 
@@ -68,40 +70,42 @@ allprojects {
     }
 
     javadoc {
-        options {
-            addStringOption("-add-modules", "java.xml.bind,java.xml.ws.annotation")
-            author = true
-            charSet = defaultEncoding
-            docEncoding = defaultEncoding
-            encoding = defaultEncoding
-            links(
-                    "https://docs.oracle.com/javase/10/docs/api/",
-                    "https://docs.spring.io/spring-boot/docs/current/api/"
-            )
-            linkSource = true
-            noHelp = true
-            setMemberLevel(JavadocMemberLevel.PUBLIC)
-            setNoQualifiers(["all"])
+        doFirst {
+            exclude "**/module-info.java"
+            options {
+                addBooleanOption('html5', true)
+                author = true
+                charSet = defaultEncoding
+                docEncoding = defaultEncoding
+                encoding = defaultEncoding
+                links(
+                        "https://docs.oracle.com/en/java/javase/11/docs/api/",
+                        "https://docs.spring.io/spring-boot/docs/current/api/"
+                )
+                linkSource = true
+                noHelp = true
+                setMemberLevel(JavadocMemberLevel.PUBLIC)
+                setNoQualifiers(["all"])
+            }
         }
     }
 
-    tasks.withType(JavaCompile) {
+    compileJava {
         doFirst {
-            options.encoding = defaultEncoding
             sourceCompatibility = jdkVersion
             targetCompatibility = jdkVersion
-            options.compilerArgs = [
-                    '-Xlint:unchecked', '-Xlint:deprecation',
-                    '--add-modules', 'java.xml.bind',
-                    '--add-modules', 'java.xml.ws.annotation',
-                    '--add-exports', 'java.xml.bind/com.sun.istack.internal=ALL-UNNAMED'
+            options.encoding = defaultEncoding
+            options.compilerArgs += [
+                    "-Xlint:unchecked", "-Xlint:deprecation",
+                    "--module-path", classpath.asPath
             ]
+            classpath = files()
         }
     }
 
 }
 
-subprojects{
+subprojects {
 
     apply plugin: 'application'
     apply plugin: 'io.spring.dependency-management'
@@ -118,10 +122,14 @@ subprojects{
 
 }
 
+project(':micro-admin') {
+    ext.moduleName = 'jp.team.study.bm.admin'
+}
+
 project(':micro-api') {
     ext.moduleName = 'jp.team.study.bm.api'
     dependencies {
-        compile project(':micro-interfaces'), project(':micro-validator')
+        compile project(':micro-interfaces'), project(':micro-validator'), project(':micro-rdb')
         testCompile project(':micro-test')
     }
 }
@@ -134,14 +142,18 @@ project(':micro-interfaces') {
     }
 }
 
+project(':micro-rdb') {
+    ext.moduleName = 'jp.team.study.bm.rdb'
+    dependencies {
+        compile project(':micro-interfaces'), project(':micro-validator')
+        testCompile project(':micro-test')
+    }
+}
+
 project(':micro-test') {
     ext.moduleName = 'jp.team.study.bm.test'
 }
 
 project(':micro-validator') {
     ext.moduleName = 'jp.team.study.bm.validator'
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = gradleVersion
 }
